fix navbar-collapse duplication in navbar visualization

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -17,8 +17,9 @@
 .fw-600 {
 	font-weight: 600;
 }
+
 .navbar-toggler {
-	border: 0;
+	border: 0 !important;
 }
 
 #dropdownBtn:hover .dropdown-menu {
@@ -28,7 +29,7 @@
 	margin-top: 0;
 }
 
-.dropdown-menu {
+#dropdownNav {
 	background-color: #ff647f;
 	min-width: 6.4rem;
 	border-radius: 1.6rem;
@@ -117,18 +118,18 @@ hr {
 	.mb-10 {
 		margin-bottom: 2.4rem;
 	}
-	.dropdown-menu {
+	#dropdownNav {
 		border-radius: 0.4rem;
 		display: block;
 	}
-	.navbar-collapse {
+	#navbarNav {
 		position: fixed;
 		display: flex;
 		flex-direction: column;
 		padding-top: 4rem;
 		background-color: #242424;
 		top: 0px;
-		left: 0;
+		left: -80vw;
 		width: 80vw;
 		height: 100%;
 		z-index: 99;
@@ -138,15 +139,15 @@ hr {
 		width: 100%;
 	}
 
-	.navbar-collapse.collapsing {
-		left: -78%;
+	#navbarNav.collapsing {
+		left: -80vw;
 		transition: height 0s;
 	}
-	.navbar-collapse.active {
+	#navbarNav.active {
 		transition: left 280ms ease-out;
 	}
 
-	.navbar-collapse.show {
+	#navbarNav.show {
 		left: 0;
 		transition: left 280ms ease-out;
 	}
